--- a/src/components/detail/Option.scss
+++ b/src/components/detail/Option.scss
@@ -1,3 +1,7 @@
+// ul,ol{
+//   list-style: none;
+// }
+
 .option-wrap {
   position: relative;
   width: 100%;
@@ -50,14 +54,14 @@
 }
 
 /* 옵션 리스트 */
-.option-list {
+ul.option-list {
   position: absolute;
-  top: 56px;
-  left: 0;
+  top: 40px;
+  left: -42px;
   width: 100%;
   border: 1px solid #ccc;
   border-top: none;
-  background: #fff;
+  background: var(--bg);
   z-index: 10;
 }
 
